--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+html{
+cursor: url("https://img.icons8.com/?size=30&id=PvxjhbARk0sD&format=png&color=000000"), auto;
+
+}
+
 body{
 
-    background: linear-gradient(to right, red 0%, blue 100%);
+    background: linear-gradient(to right, rgb(105, 185, 250) 0%, rgb(57, 57, 230) 100%);
 font-family: "Noto Sans JP", sans-serif;
-font-weight: weight;
-  font-style: normal;
+font-weight: 400px;
+font-style: normal;
 }
 
 .box{
@@ -26,5 +31,82 @@ border-radius: 32px;
 a{
 text-decoration: none;
 color: inherit;
+cursor: url("https://img.icons8.com/?size=30&id=0DZVqi4HKP6A&format=png&color=000000"), auto;
 
+
+}
+
+nav{
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 10px 20px;
+background-color: rgb(220, 215, 215);
+border-bottom: 2px  solid  rgb(200, 191, 191);
+border-radius: 22px;
+
+}
+
+.flex-container{
+display: flex;
+flex-wrap: wrap;
+gap: 30px;
+}
+
+.hero-section{
+background-image: url("images/download.jpg") ;
+background-size: contain;
+color: rgb(249, 251, 253);
+padding: 17px;
+height: 333px;
+}
+
+button{
+  cursor: url("https://img.icons8.com/?size=30&id=0DZVqi4HKP6A&format=png&color=000000");
+  color:rgb(67, 164, 197);
+  padding: 10px 20px;
+  border: 1px solid blue;
+  border-radius: 10px;
+  font-size: medium;
+  margin-top: 153px;
+}
+
+.products{
+color: rgb(88, 200, 237);
+padding: 20px 30px;
+
+
+}
+
+.flex{
+display: flex;
+gap: 13px;
+
+}
+
+.flex img{
+width: 200px;
+height: 200px;
+border-radius: 22px;
+}
+
+article{
+margin-top: 2px;  
+position: relative;
+
+}
+
+.article button{
+position: absolute;
+bottom: 4px;
+left: 52px;
+
+}
+
+footer{
+  text-align: center;
+padding: 22px;
+background: linear-gradient(to right, rgb(105, 185, 250) 0%, rgb(57, 57, 230) 100%);
+margin-top:32px ;
+border-top: 2px solid white;
 }
